# g2d-rs

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md  SECURITY.md  TESTING.md  sonar-project.properties
.github/: copilot-instructions.md
.github/scripts/: benchmark_summary.py
.github/workflows/: bench.yml  release.yml  sbom.yml  test.yml
crates/g2d-sys/: Cargo.toml  README.md  g2d.h  update.sh
crates/g2d-sys/benches/: common.rs  video_benchmark.rs
crates/g2d-sys/src/: ffi.rs  lib.rs
crates/g2d-sys/tests/: hardware_tests.rs
